--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React App</title>
-    <link rel="stylesheet" href="style.css"> 
+    <!-- React Icon from Icons8 as Favicon -->
+    <link rel="icon" href="https://img.icons8.com/ultraviolet/40/000000/react--v1.png" type="image/png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
